deploy/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: manejo-finanzas
spec:
  selector:
    app: manejo-finanzas
  ports:
    - port: 3001
      targetPort: 80
      protocol: TCP
      name: http
  type: LoadBalancer
