deploy/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manejo-finanzas
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: TODO_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manejo-finanzas
                port:
                  number: 80
